tests/checker/ok/result_dispatch.can
Unit => Result<Program, Unit> {
    42 -> Ok -> (
        * Err<Unit> => Unit { "err" -> Print }
        * Ok<Int> => Unit { "ok" -> Print }
    )
    Unit() -> Ok
}
