tests/checker/fail/dispatch_arm_pattern_not_any_variant.can
Unit => Program {
    True() -> (
        * Int => Unit { "wrong" -> Print }
    )
}
